--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "vmess or vles",
-  "description": "vmess or vles",
+  "name": "coat",
+  "description": "coat",
   "keywords": [
     "vmess or vles"
   ],
@@ -22,8 +22,8 @@
     }
    
   },
-  "website": "https://github.com/louyour/nginx-Manual",
-  "repository": "https://github.com/louyour/nginx-Manual",
+  "website": "https://github.com/gfdrej75/rvr24",
+  "repository": "https://github.com/gfdrej75/rvr24",
   "stack": "container",
   "features": [
     "runtime-dyno-metadata"
